--- a/styles.css
+++ b/styles.css
@@ -121,7 +121,6 @@ footer .container-full {
 }
 
 #about,
-
 #pricing,
 #qa {
     background: var(--linear-gradient-text-secondary);
@@ -968,7 +967,7 @@ lite-youtube.img-ready .lyt-playbtn {
 .carousel-slide {
     min-width: 100%;
     position: relative;
-    opacity: 0;
+    opacity: 1;
     transition: all 0.2s ease-in;
     pointer-events: none;
     user-select: none;
@@ -976,16 +975,16 @@ lite-youtube.img-ready .lyt-playbtn {
 
 .carousel-slide.active {
     opacity: 1;
-    pointer-events: auto;
+    filter: blur(0);
+    transform: scale(1);
     z-index: 1;
 }
 
-/* Add styles for adjacent slides */
-.carousel-slide.adjacent {
+.carousel-slide.prev,
+.carousel-slide.next {
     opacity: 0.3;
-    filter: blur(4px);
-    transform: scale(0.98);
-
+    filter: blur(2px);
+    transform: scale(0.96);
 }
 
 .carousel-navigation {
@@ -1004,15 +1003,6 @@ lite-youtube.img-ready .lyt-playbtn {
     pointer-events: none;
     z-index: 2;
 }
-
-/* .carousel-slide .image-placeholder {
-    transform: scale(1);
-    transition: transform var(--transition-duration-fast) ease;
-}
-
-.carousel-slide.active .image-placeholder {
-    transform: scale(1);
-} */
 
 .carousel-dots {
     display: flex;
@@ -1078,11 +1068,6 @@ lite-youtube.img-ready .lyt-playbtn {
     pointer-events: none;
 } */
 
-/* Hide buttons at ends */
-.carousel-slide:first-child.active~.carousel-navigation .prev,
-.carousel-slide:last-child.active~.carousel-navigation .next {
-    display: none;
-}
 
 /* Questions Section */
 .qa-container {
