--- a/styles.css
+++ b/styles.css
@@ -432,7 +432,6 @@ lite-youtube img {
 
 .modal-content {
     position: relative;
-    /* aspect-ratio: 0.5; */
     width: 100%;
     height: 100%;
     margin-inline: auto;
@@ -1117,6 +1116,10 @@ footer .container-full {
     .close-modal svg {
         width: 1.5rem;
         height: 1.5rem;
+    }
+
+    lite-youtube {
+        max-width: var(--viewport-width-mobile) !important;
     }
 }
 
