--- a/styles.css
+++ b/styles.css
@@ -399,7 +399,7 @@ lite-youtube img {
     border-radius: var(--border-radius);
     font-size: 0.9rem;
     transition: background-color var(--transition-duration) ease,
-        transform var(--clicked-feedback-time) ease;
+        transform var(--clicked-feedback-time) ease-in;
     box-shadow: var(--box-shadow-cta);
 }
 
@@ -408,7 +408,7 @@ lite-youtube img {
 }
 
 .watch-demo:active {
-    transform: scale(0.95);
+    transform: scale(0.93);
 }
 
 .video-modal {
@@ -419,11 +419,11 @@ lite-youtube img {
     display: none;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
     z-index: 2000;
     background: rgb(0, 0, 0);
     padding: 0.5rem;
-    gap: 1rem;
+    /* gap: 1rem; */
 }
 
 .video-modal.show {
@@ -438,8 +438,7 @@ lite-youtube img {
     background: black;
     border-radius: var(--border-radius);
     overflow: hidden;
-    /* border: solid 0.2rem var(--primary-color-dark); */
-
+    margin-bottom: 2.5rem;
 }
 
 /* Update lite-youtube styles */
@@ -455,29 +454,25 @@ lite-youtube img {
 /* Update close button z-index */
 .close-modal {
     align-self: flex-end;
-    margin-right: 0.5rem;
-    margin-top: 0.5rem;
-    /* position: relative; */
-    /* top: -3rem; */
-    /* right: 0; */
     background: transparent;
     border: none;
     border-radius: 50%;
-    padding: 1rem;
     cursor: pointer;
-    /* z-index: 2020; */
-    transition: background-color var(--transition-duration) ease;
+    transition: transform var(--clicked-feedback-time) ease;
+    padding: 0.5rem;
+}
+
+
+.close-modal:active {
+    transform: scale(0.93);
 }
 
 .close-modal svg {
-    width: 2rem;
-    height: 2rem;
-    fill: white;
+    width: 1.5rem;
+    height: 1.5rem;
+    /* fill: white; */
 }
 
-.close-modal:hover {
-    /* background: var(--accent-color-bright); */
-}
 
 .teachers-container {
     display: flex;
@@ -1114,12 +1109,16 @@ footer .container-full {
     }
 
     .close-modal svg {
-        width: 1.5rem;
-        height: 1.5rem;
+        width: 1.25rem;
+        height: 1.25rem;
     }
 
     lite-youtube {
         max-width: var(--viewport-width-mobile) !important;
+    }
+
+    .modal-content {
+        margin-bottom: 2.25rem;
     }
 }
 
