--- a/styles.css
+++ b/styles.css
@@ -399,7 +399,7 @@ lite-youtube img {
     border-radius: var(--border-radius);
     font-size: 0.9rem;
     transition: background-color var(--transition-duration) ease,
-        transform var(--clicked-feedback-time) ease-in;
+        transform var(--clicked-feedback-time) ease;
     box-shadow: var(--box-shadow-cta);
 }
 
@@ -408,7 +408,7 @@ lite-youtube img {
 }
 
 .watch-demo:active {
-    transform: scale(0.93);
+    transform: scale(0.95);
 }
 
 .video-modal {
@@ -423,8 +423,6 @@ lite-youtube img {
     z-index: 2000;
     background: rgb(0, 0, 0);
     padding: 0.25rem;
-    /* gap: 1rem; */
-
 }
 
 .video-modal.show {
@@ -436,10 +434,12 @@ lite-youtube img {
     width: 100%;
     height: 100%;
     margin-inline: auto;
-    background: rgb(0, 0, 0);
+    background: black;
     border-radius: var(--border-radius);
     overflow: hidden;
-    margin-bottom: 3.5rem;
+    border: solid 0.2rem var(--primary-color-dark);
+    margin-bottom: 3rem;
+
 }
 
 /* Update lite-youtube styles */
@@ -455,27 +455,30 @@ lite-youtube img {
 /* Update close button z-index */
 .close-modal {
     align-self: flex-end;
+    padding: 0.5rem;
+    margin-right: 0.5rem;
+    margin-top: 0rem;
+    /* position: relative; */
+    /* top: -3rem; */
+    /* right: 0; */
     background: transparent;
     border: none;
     border-radius: 50%;
+
     cursor: pointer;
-    transition: transform var(--clicked-feedback-time) ease;
-    margin-right: 1rem;
-    margin-top: 1rem;
-    padding: 0.5rem;
-}
-
-
-.close-modal:active {
-    transform: scale(0.93);
+    /* z-index: 2020; */
+    transition: background-color var(--transition-duration) ease;
 }
 
 .close-modal svg {
-    width: 1.5rem;
-    height: 1.5rem;
-    /* fill: white; */
+    width: 2rem;
+    height: 2rem;
+    fill: white;
 }
 
+.close-modal:hover {
+    /* background: var(--accent-color-bright); */
+}
 
 .teachers-container {
     display: flex;
@@ -1103,28 +1106,27 @@ footer .container-full {
         height: 1.5rem;
     }
 
+    .modal-content {
+        margin-bottom: 2.25rem;
+    }
+
     .video-modal {
         max-width: var(--viewport-width-mobile);
     }
 
     .close-modal {
-        margin-right: 0.5rem;
-        margin-top: 0.5rem;
         padding: 0.25rem;
-        /* margin-inline-end: 1rem; */
+        margin-right: 0.25rem;
+        margin-top: 0.25rem;
     }
 
     .close-modal svg {
-        width: 1.25rem;
-        height: 1.25rem;
+        width: 1.5rem;
+        height: 1.5rem;
     }
 
     lite-youtube {
         max-width: var(--viewport-width-mobile) !important;
-    }
-
-    .modal-content {
-        margin-bottom: 2.25rem;
     }
 }
 
