--- a/styles.css
+++ b/styles.css
@@ -387,7 +387,7 @@ lite-youtube img {
 .style-card {
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
     gap: 1rem;
     background-color: var(--background-color);
@@ -543,8 +543,8 @@ lite-youtube img {
 .calendar-cards {
     display: flex;
     flex-wrap: wrap;
-    gap: 2rem;
-    justify-content: space-around;
+    gap: 1rem;
+    justify-content: space-evenly;
 }
 
 
@@ -552,14 +552,16 @@ lite-youtube img {
 .calendar-card {
     display: flex;
     flex-direction: column;
+    /* align-items: center; */
+    justify-content: flex-start;
     gap: 1rem;
     background-color: var(--background-color);
     border-radius: var(--border-radius);
     box-shadow: var(--box-shadow-primary);
     padding: 1.5rem;
-    max-width: 300px;
+    /* max-width: 300px; */
     min-width: 250px;
-    flex-basis: 25%;
+    flex-basis: 30%;
     color: var(--text-color);
 }
 
@@ -653,7 +655,7 @@ lite-youtube img {
 .pricing-card {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: stretch;
     align-items: center;
     gap: 1rem;
     background-color: var(--background-color);
