--- a/styles.css
+++ b/styles.css
@@ -804,16 +804,16 @@ lite-youtube.img-ready .lyt-playbtn {
 .carousel-container {
     display: flex;
     width: 100%;
-    transition: transform 0.2s ease-in;
+    transition: all 0.3s ease-in;
     margin-inline: auto;
-    will-change: transform;
+    will-change: transform, opacity;
 }
 
 .carousel-slide {
     min-width: 100%;
     position: relative;
     opacity: 1;
-    transition: all 0.2s ease-in;
+    transition: all 0.3s ease-in;
     pointer-events: none;
     user-select: none;
 }
@@ -835,7 +835,7 @@ lite-youtube.img-ready .lyt-playbtn {
 
 .carousel-slide.prev,
 .carousel-slide.next {
-    opacity: 0.3;
+    opacity: 0.5;
     transform: scale(0.9);
 }
 
