--- a/styles.css
+++ b/styles.css
@@ -540,29 +540,8 @@ lite-youtube img {
     flex-grow: 4;
 }
 
-.calendar-cards {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 1rem;
-    justify-content: space-evenly;
-}
-
-
-/* Day Card */
-.calendar-card {
-    display: flex;
-    flex-direction: column;
-    /* align-items: center; */
-    justify-content: flex-start;
-    gap: 1rem;
-    background-color: var(--background-color);
-    border-radius: var(--border-radius);
-    box-shadow: var(--box-shadow-primary);
-    padding: 1.5rem;
-    /* max-width: 300px; */
-    min-width: 250px;
-    flex-basis: 30%;
-    color: var(--text-color);
+.calendar-container .image-placeholder {
+    padding-bottom: 68%;
 }
 
 .day-heading {
